--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Casamento Luiz & Gabriela</title>
+    <title>Casamento L&G</title>
+    <link rel="icon" href="/cartinha.jpeg" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
