--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Casamento L&G</title>
+    <title>Casamento G&L</title>
     <link rel="icon" href="/cartinha.jpeg" type="image/png" />
   </head>
   <body>
